yaml/front-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eyesone-front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: 271153858532.dkr.ecr.ap-northeast-2.amazonaws.com/team7-ms4-front
        imagePullPolicy: Always
        ports: 
        - containerPort: 8095
          protocol: TCP
