yaml/communication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyesone-communication-service
spec:
  selector:
    app: communication
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
