yaml/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyesone-front-service
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
      nodePort: 32001
  type: NodePort
