yaml/game-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyesone-game-service
spec:
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
