yaml/nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8088
    nodePort: 32000 # 외부 dns 등록을 위해 nodeport를 고정으로 설정한다.
  - name: https
    port: 443
    targetPort: https
  selector:
    k8s-app: nginx-ingress-lb
