yaml/rank-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyesone-rank-service
spec:
  selector:
    app: rank
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
