yaml/eyesone-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eyesone-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /game/*
          backend:
            serviceName: eyesone-game-service
            servicePort: 8088
